# Models/problem.go
@@ -1,26 +1,0 @@
-package Models
-
-import (
-	"gorm.io/gorm"
-)
-
-type Problem struct {
-	gorm.Model
-	Identity   string `gorm:"column:identity;type:varchar(36);" json:"identity"`
-	CategoryId string `gorm:"column:category_id;" json:"category_id"`
-	Title      string `gorm:"column:title;type:varchar(255);" json:"title"`
-	Content    string `gorm:"column:content;type:text;" json:"content"`
-	MaxMem     int    `gorm:"column:max_mem;type:int(11);" json:"max_mem"`
-	MaxRuntime int    `gorm:"column:max_runtime;type:int(11);" json:"max_runtime"`
-}
-
-func (table *Problem) TableName() string {
-	return "problem"
-}
-
-func GetProblemList(keyword string) *gorm.DB {
-
-	return DB.Model(new(Problem)).
-		Where("title like ? OR content like ?",
-			"%"+keyword+"%", "%"+keyword+"%")
-}
