# docs/swagger.yaml
@@ -1,6 +1,40 @@
 info:
   contact: {}
 paths:
+  /login:
+    post:
+      parameters:
+      - description: 用户名
+        in: formData
+        name: username
+        type: string
+      - description: 密码
+        in: formData
+        name: password
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 用户登录
+      tags:
+      - 公共方法
+  /problem-detail:
+    get:
+      parameters:
+      - description: 'problemidentity '
+        in: query
+        name: identity
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 问题详情
+      tags:
+      - 公共方法
   /problem-list:
     get:
       parameters:
@@ -16,12 +50,62 @@ paths:
         in: query
         name: keyword
         type: string
+      - description: 'category_identity '
+        in: query
+        name: category_identity
+        type: string
       responses:
         "200":
           description: '{"code":"200","data":""}'
           schema:
             type: string
       summary: 问题列表
+      tags:
+      - 公共方法
+  /submit-list:
+    get:
+      parameters:
+      - description: 请输入当前页，默认第一页
+        in: query
+        name: page
+        type: integer
+      - description: size
+        in: query
+        name: size
+        type: integer
+      - description: problem_identity
+        in: query
+        name: problem_identity
+        type: string
+      - description: 'user_identity '
+        in: query
+        name: user_identity
+        type: string
+      - description: status
+        in: query
+        name: status
+        type: integer
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 问题列表
+      tags:
+      - 公共方法
+  /user-basic:
+    get:
+      parameters:
+      - description: 'useridentity '
+        in: query
+        name: identity
+        type: string
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 用户详情
       tags:
       - 公共方法
 swagger: "2.0"
