# router/app.go
@@ -16,6 +16,15 @@ func Router() *gin.Engine {
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	r.GET("/ping", service.Ping)
+	//问题
 	r.GET("/problem-list", service.GetProblemList)
+	r.GET("/problem-detail", service.GetProblemDetail)
+
+	//用户
+	r.GET("/user-basic", service.GetUserBasic)
+	r.POST("/login", service.Login)
+
+	//提交记录
+	r.GET("/submit-list", service.GetSubmitList)
 	return r
 }
