# service/problem.go
@@ -7,6 +7,7 @@ import (
 	"strconv"
 
 	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 )
 
 // GetProblemList
@@ -15,6 +16,7 @@ import (
 // @Param page query int false "请输入当前页，默认第一页"
 // @Param size query int false "size"
 // @Param keyword query string false "keyword"
+// @Param category_identity query string false "category_identity "
 // @Success 200 {string} json "{"code":"200","data":""}"
 // @Router /problem-list [get]
 func GetProblemList(c *gin.Context) {
@@ -30,11 +32,13 @@ func GetProblemList(c *gin.Context) {
 		return
 	}
 	page = (page - 1) * size
+
 	var count int64
 	keyword := c.Query("keyword")
+	categoryIdentity := c.Query("category_identity")
 
-	list := make([]*Models.Problem, 0)
-	tx := Models.GetProblemList(keyword)
+	list := make([]*Models.ProblemBasic, 0)
+	tx := Models.GetProblemList(keyword, categoryIdentity)
 	err = tx.Count(&count).Omit("content").Offset(page).Limit(size).Find(&list).Error
 	if err != nil {
 		log.Printf("Failed to get problem list: %v", err)
@@ -47,5 +51,41 @@ func GetProblemList(c *gin.Context) {
 			"count": count,
 		},
 	})
+}
 
+// GetProblemDetail
+// @Tags 公共方法
+// @Summary 问题详情
+// @Param identity query string false "problemidentity "
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /problem-detail [get]
+func GetProblemDetail(c *gin.Context) {
+	identity := c.Query("identity")
+	if identity == "" {
+		c.JSON(200, gin.H{
+			"code": -1,
+			"msg":  "参数不完整",
+		})
+		return
+	}
+	var data *Models.ProblemBasic
+	err := Models.GetProblemDetail(identity).Find(&data).Error
+	if err != nil {
+		if err == gorm.ErrRecordNotFound {
+			c.JSON(200, gin.H{
+				"code": -1,
+				"msg":  "题目不存在",
+			})
+			return
+		}
+		c.JSON(200, gin.H{
+			"code": -1,
+			"msg":  "系统错误",
+		})
+		return
+	}
+	c.JSON(200, gin.H{
+		"code": 200,
+		"data": data,
+	})
 }
